--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "author": "Peeyush Mamodia",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "mongoose": "^5.9.29",
+    "node-sass-middleware": "^0.11.0"
   }
 }
