--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Peeyush Mamodia",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "connect-flash": "^0.1.1",
